--- a/ECOMMERCEMAVEN/pom.xml
+++ b/ECOMMERCEMAVEN/pom.xml
@@ -108,9 +108,7 @@
 		</dependency>
 
 	
-		
-		
-		
+ 
 		<!-- ======================Dependances pour le web============================== -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 		<dependency>
@@ -118,10 +116,6 @@
 		    <artifactId>spring-web</artifactId>
 		    <version>4.1.9.RELEASE</version>
 		</dependency>
-		
-		
-		
-		
 		
 		
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
@@ -158,6 +152,21 @@
 		    <artifactId>jstl</artifactId>
 		    <version>1.1.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.10</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>4.1.9.RELEASE</version>
+		</dependency>
+		
   </dependencies>
   
   
