--- a/ECOMMERCEMAVEN/src/main/webapp/WEB-INF/web.xml
+++ b/ECOMMERCEMAVEN/src/main/webapp/WEB-INF/web.xml
@@ -1,35 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xmlns="http://java.sun.com/xml/ns/javaee" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-version="3.0">
-  <display-name>ECOMMERCEMAVEN</display-name>
-  
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/application-context.xml</param-value>
-  </context-param>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
+	<display-name>ECOMMERCEMAVEN</display-name>
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/application-context.xml</param-value>
+	</context-param>
 
 	<servlet>
-	  	<servlet-name>ProjectServlet</servlet-name>
-	  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
- 		<init-param>
-	 		<param-name>contextConfigLocation</param-name>
-	 		<param-value>/WEB-INF/mvc-context.xml</param-value>
-	 	</init-param>
+		<servlet-name>ProjectServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/mvc-context.xml</param-value>
+		</init-param>
 	</servlet>
-  
- 	<servlet-mapping>
-	 	<servlet-name>ProjectServlet</servlet-name>
-	 	<url-pattern>/</url-pattern>
- 	</servlet-mapping>
- 
-   	<welcome-file-list>
-    	<welcome-file>index.jsp</welcome-file>
-  	</welcome-file-list>
-  	
-  	<listener>
+
+	<servlet-mapping>
+		<servlet-name>ProjectServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
+	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-  
+
+	<!-- Configuration de Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- Chargé le contexte spring security -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/securiteContext.xml</param-value>
+	</context-param>
+
+
+
 </web-app>
